# gcc-site

./: .djlintrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.dev.yaml  flake.nix
api/: .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  docker-entrypoint.dev.sh  entrypoint-dev.sh  pyproject.toml  requirements.txt
api/.prospector/: ci.yaml
api/events/: admin.py  apps.py  forms.py  urls.py
api/events/migrations/: 0002_alter_event_description.py  0003_auto_20220820_1854.py
api/events/models/: signup.py
api/events/views/: events.py  signup.py
api/fixtures/: events.json  partners.json  users.json
api/gccsite/: asgi.py  celery.py  manage.py  settings.py  simplejwt_yasg.py  urls.py  wsgi.py
api/gccsite/events/: admin.py  apps.py  serializers.py  urls.py
api/gccsite/gccsite/: backends.py  serializers.py  urls.py
api/gccsite/partners/: admin.py  models.py  serializers.py  urls.py  views.py
api/gccsite/settings/: docker-dev.py
api/gccsite/users/: models.py  serializers.py  urls.py  views.py
api/partners/: apps.py  models.py  serializers.py
api/partners/migrations/: 0003_auto_20220509_1052.py
api/users/: admin.py  apps.py
api/users/migrations/: 0001_initial.py
backend/: entrypoint.sh  manage.py  pyproject.toml
backend/.prospector/: base.yaml
backend/events/: admin.py  apps.py  forms.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_initial.py  0002_remove_application_labels_application_address_and_more.py  0003_alter_application_status.py  0003_event_year.py  0004_event_camps_type.py  0004_remove_event_form.py  0004_remove_event_form_application_phone_delete_form.py  0005_alter_application_status.py  0005_delete_form_remove_application_form_answer.py  0006_application_about_application_allergies_and_more.py  0007_remove_application_about_and_more.py  0008_application_created_at.py
backend/events/models/: __init__.py  events.py  signup.py
backend/events/views/: events.py  signup.py
backend/fixtures/: events.json  users.json
backend/gccsite/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
backend/gccsite/settings/: common.py  dev.py
backend/pages/: urls.py  views.py
backend/partners/: views.py
backend/partners/migrations/: 0001_initial.py  0005_alter_partner_description.py
backend/static/css/: AccountInformationsView.css  main.css
backend/static/js/: form-flow.js
backend/users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_options.py  0002_remove_user_address_remove_user_city_and_more.py  0002_user_can_review.py  0003_address_user_birth_date.py  0003_remove_user_username.py  0003_user_birth_date.py  0004_user_address.py  0005_alter_user_address.py  0006_alter_user_address.py  0007_alter_user_birth_date.py
website/: .ipython_config.py  Dockerfile  entrypoint.sh  import_from_legacy_website.py  manage.py  pyproject.toml
website/.prospector/: base.yaml  ci.yaml
website/applications/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
website/applications/migrations/: 0001_initial.py  0002_alter_application_options_alter_application_status.py  0003_rename_dob_application_birthdate.py  0004_remove_application_address_and_more.py  0005_alter_application_unique_together.py  0005_application_responsable.py  0006_alter_application_notes_alter_application_profile.py  0007_application_tshirt.py  0008_alter_application_status.py
website/applications/templatetags/: application_filters.py
website/events/: admin.py  api.py  forms.py  models.py  tasks.py  urls.py  validators.py  views.py
website/events/migrations/: 0001_initial.py  0002_alter_event_options_application_email_and_more.py  0002_application_address_resp.py  0002_application_notes.py  0002_application_notes_address_resp.py  0002_initial.py  0002_remove_eventdocument_document_and_more.py  0003_address_gg_maps_query.py  0003_alter_application_status_squashed_0005_alter_application_status.py  0003_application_email_resp_application_first_name_resp_and_more.py  0003_remove_application_event_remove_application_user_and_more.py  0003_remove_eventdocument_document_and_more.py  0004_alter_event_options_application_email_and_more.py  0004_remove_address_lat_remove_address_lng.py  0004_remove_eventdocument_document_and_more.py  0005_alter_event_documents.py  0005_application_school.py  0006_alter_event_documents.py  0007_alter_event_options_event_managers_event_staff.py
website/events/models/: __init__.py  events.py  signup.py
website/events/templatetags/: custom_filters.py
website/fixtures/: applications.json  centers.json  events.json  partners.json  profiles.json  users.json
website/gccsite/: asgi.py  celery.py  context_processors.py  env.py  storages.py  tools.py  urls.py  wsgi.py
website/gccsite/auth/: auth_pipeline.py  backend.py
website/gccsite/settings/: auth.py  celery.py  common.py  debug.py  dev.py
website/gccsite/storage/: apps.py  backends.py  tasks.py
website/pages/: urls.py  views.py
website/partners/: admin.py  apps.py  models.py  urls.py  views.py
website/partners/migrations/: 0001_initial.py  0002_partneradmin.py  0003_alter_partner_status.py  0004_alter_partner_options_delete_partneradmin.py  0005_alter_partner_logo.py  0006_alter_partner_logo.py
website/profiles/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
website/profiles/migrations/: 0001_initial.py  0002_alter_profile_complement_app_and_more.py  0002_profile_email_confirmed_profile_email_resp_confirmed_and_more.py  0002_remove_profile_nb_participations_and_more.py
website/static/css/: button.css  colors.css  footer.css  forms.css  main.css
website/static/js/: application_form.js  form_flow.js  main.js  partners.js  personal_info_form.js  review.js
website/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
website/users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_profile.py  (+5 more)
(+300 files in other folders)
