[tool.poetry]
name = "gccsite-api"
version = "0.1.0"
description = "Backend of Girls Can Code! website"
authors = ["Association Prologin <info@prologin.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
celery = { version = "^5.2" }
django = "^4.2"
gunicorn = "^21.0.0"
django-structlog = { version = "^6.0", extras = ["celery"] }
django-storages = "^1.12"
django-rest-knox = { version = "^4.2" }
django-celery-beat = { version = "^2.4" }
django-fsm = "^2.8.1"
django-fsm-admin = { git = "https://github.com/gadventures/django-fsm-admin", rev = "fe59a4b" }
mozilla-django-oidc = "^3.0.0"
django-prometheus = "^2.3.1"
django-recaptcha = "^4.0.0"
pypdf = "^3.17.4"
python-magic = "^0.4.27"
djangorestframework = "^3.14.0"
django-constance = "^3.1.0"

# Database
boto3 = "^1.24"
psycopg2-binary = "^2.9.6"
django-redis = "^5"

# Frontend
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^2023.10"
django-bootstrap-icons = "^0.8.3"

# Dev/Debug stuff
ipython = "^8.12.0"
django-debug-toolbar = "^4.2.0"
django-mail-panel = "^4.0"
prospector = { extras = ["with_everything"], version = "*" }
coverage = { version = "*", extras = ["toml"] }

# Mail management
django-post-office = "^3.6"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
djlint = "^1.34"
ruff = "0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["../*migrations*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Re-enable the standard pragma
    "pragma: nocover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
]


[tool.black]
line-length = 79
force_exclude = '''
# Do not format Django generated files
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip_glob = ["*migrations*"]

[tool.djlint]
ignore = "H006,H013,H021"
indent = 4
max_blank_lines = 3
max_line_length = 80
preserve_blank_lines = true

[tool.ruff]
target-version = "py310"
exclude = [
    ".venv",
    "migrations",
    ".ipython_config.py",
    "import_from_legacy_website.py",
]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "DJ"]
ignore = ["DJ001"]                               # Ignore the "dont use null on TextFields

[tool.ruff.lint.per-file-ignores]
"gccsite/settings/*" = ["F403", "F405"] # Remove expected "import *" errors

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
