[tool.poetry]
name = "gccsite-api"
version = "0.1.0"
description = "Backend of Girls Can Code! website"
authors = ["Association Prologin <info@prologin.org>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"

django-fsm = "^2.8.1"
django-fsm-admin = { git = "https://github.com/gadventures/django-fsm-admin", rev = "fe59a4b" }
django-prometheus = "^2.3.1"
django-recaptcha = "^4.0.0"
django-structlog = { version = "^6.0", extras = ["celery"] }
pypdf = "^3.17.4"
python-magic = "^0.4.27"
djangorestframework = "^3.14.0"
django-constance = "^3.1.0"
social-auth-app-django = "^5.4.0"
social-auth-core = "^4.5.3"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}
django-countries = {extras = ["pyuca"], version = "^7.5.1"}

# Prod
gunicorn = "^21.0.0"
ipython = "^8.12.0"

# S3
boto3 = "^1.24"
django-storages = "^1.12"

# DB
psycopg2-binary = "^2.9.6"
django-redis = { version = "^5" }

# Scheduling
celery = { version = "^5.2" }
django-celery-beat = { version = "^2.4" }

# Auth
mozilla-django-oidc = "^3.0.0"
django-rest-knox = { version = "^4.2" }

# Mailing
django-mail-panel = "^4.0"
django-post-office = "^3.6"

# Frontend
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^2023.10"
django-bootstrap-icons = "^0.8.3"


[tool.poetry.dev-dependencies]
django-debug-toolbar = "^4.2.0"

djlint = "^1.34"
prospector = { extras = ["with_everything"], version = "*" }
ruff = "0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.djlint]
ignore = "H006,H013,H021"
indent = 4
max_blank_lines = 3
max_line_length = 80
preserve_blank_lines = true

[tool.ruff]
target-version = "py312"
exclude = [
    ".venv",
    "migrations",
    ".ipython_config.py",
    "import_from_legacy_website.py",
]
line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "DJ"]
ignore = ["DJ001"]                               # Ignore the "dont use null on TextFields

[tool.ruff.lint.per-file-ignores]
"gccsite/settings/*" = ["F403", "F405"] # Remove expected "import *" errors

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
